build/log/idf_py_stderr_output_557756
/home/joagz/esp-idf/projects/web-esp32/main/web-esp32.c:4:18: error: pointer targets in initialization of 'uint8_t *' {aka 'unsigned char *'} from 'char *' differ in signedness [-Werror=pointer-sign]
    4 |     .wifi_ssid = "",
      |                  ^~
/home/joagz/esp-idf/projects/web-esp32/main/web-esp32.c:4:18: note: (near initialization for 'config.wifi_ssid')
/home/joagz/esp-idf/projects/web-esp32/main/web-esp32.c:5:17: error: pointer targets in initialization of 'uint8_t *' {aka 'unsigned char *'} from 'char *' differ in signedness [-Werror=pointer-sign]
    5 |     .wifi_pwd = ""
      |                 ^~
/home/joagz/esp-idf/projects/web-esp32/main/web-esp32.c:5:17: note: (near initialization for 'config.wifi_pwd')
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/web-esp32.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/joagz/esp-idf/projects/web-esp32/webesp/webesp32.c: In function 'startWebESPApp':
/home/joagz/esp-idf/projects/web-esp32/webesp/webesp32.c:57:22: warning: initialization of 'unsigned char' from 'uint8_t *' {aka 'unsigned char *'} makes integer from pointer without a cast [-Wint-conversion]
   57 |             .ssid = {config.wifi_ssid},
      |                      ^~~~~~
/home/joagz/esp-idf/projects/web-esp32/webesp/webesp32.c:57:22: note: (near initialization for 'wifi_config.sta.ssid[0]')
/home/joagz/esp-idf/projects/web-esp32/webesp/webesp32.c:58:26: warning: initialization of 'unsigned char' from 'uint8_t *' {aka 'unsigned char *'} makes integer from pointer without a cast [-Wint-conversion]
   58 |             .password = {config.wifi_pwd},
      |                          ^~~~~~
/home/joagz/esp-idf/projects/web-esp32/webesp/webesp32.c:58:26: note: (near initialization for 'wifi_config.sta.password[0]')
make[1]: *** [CMakeFiles/Makefile2:5484: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
